--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
-    "start": "node index.js"
+    "start": "node index.js",
+    "apx-generate": "tsx ./bin/codegen.ts", 
+	"postinstall": "tsc -t es2022 -m es2022 --outDir ./bin codegen.ts "
+  },
+  "bin": {
+    "apx-gen": "./bin/codegen.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
 }
