--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	"author": "",
 	"license": "ISC",
 	"description": "",
-	"peerDependencies": {
+	"dependencies": {
 		"chalk": "^5",
 		"@types/node": "^20",
 		"tsx": "^4",
