--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "noEmit": false,
     "allowImportingTsExtensions": false,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "declaration": true,
+    "declarationMap": true
   },
-  "exclude": ["dist", "node_modules"]
+  "include": ["*.ts", "generator/**/*.ts"],
+  "exclude": ["dist", "node_modules", "**/*.test.ts"]
 }
