--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "apx.rest",
 	"version": "1.0.0",
-	"main": "dist/index.js",
+	"main": "dist/src/index.js",
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
