--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,8 +5,9 @@
     "allowImportingTsExtensions": false,
     "outDir": "./dist",
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "rootDir": "."
   },
-  "include": ["*.ts", "generator/**/*.ts"],
+  "include": ["src/**/*.ts", "codegen.ts", "generator/**/*.ts"],
   "exclude": ["dist", "node_modules", "**/*.test.ts"]
 }
