--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "1.0.0",
 	"main": "dist/src/index.js",
 	"type": "module",
+	"exports": {
+		".": "./dist/src/index.js"
+	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc -p ./tsconfig.build.json",
